--- a/src/app/tab1/tab1.page.html
+++ b/src/app/tab1/tab1.page.html
@@ -1,36 +1,65 @@
 <ion-header>
   <ion-toolbar>
-    <ion-title>
+    <ion-title class="ion-text-center">
       Movies
     </ion-title>
   </ion-toolbar>
 </ion-header>
 
-<ion-content>
+<ion-content *ngIf="movies">
 
       <ion-card-header>
-        <ion-card-title><strong>Populare</strong></ion-card-title>
+        <ion-card-title><strong>Populaires</strong></ion-card-title>
       </ion-card-header>
       <ion-card-content>
 
       </ion-card-content>
+<ion-grid>
+  <ion-row>
+    <ion-col>
+      <div>
+        <ion-img [src]="movies.logo_path"></ion-img>
+          <p class="title">{{ movies.title }}</p>
+          <div class="double">
+            <p class="year">{{ movies.release_date | date:'yyyy' }}</p>
+            <ion-icon name="star" class="star"></ion-icon><p class="note">{{ movies.vote_average }}</p>  
+          </div> 
+       </div>
+    </ion-col>
+    <ion-col>
+      <div>
+        <ion-img [src]="movies.poster_path"></ion-img>
+          <p class="title">{{ movies.title }}</p>
+          <div class="double">
+            <p class="year">{{ movies.release_date | date:'yyyy' }}</p>
+            <ion-icon name="star" class="star"></ion-icon><p class="note">{{ movies.vote_average }}</p>  
+          </div> 
+       </div>
+    </ion-col>
+  </ion-row>
 
-    <ion-list lines="none">
-      <ion-item>
-        <ion-icon slot="start" color="medium" name="book"></ion-icon>
-        <ion-label>{{ backdrop_path }}</ion-label>
-      </ion-item>
-      <ion-item href="https://ionicframework.com/docs/building/scaffolding">
-        <ion-icon slot="start" color="medium" name="build"></ion-icon>
-        <ion-label>Scaffold Out Your App</ion-label>
-      </ion-item>
-      <ion-item href="https://ionicframework.com/docs/layout/structure">
-        <ion-icon slot="start" color="medium" name="grid"></ion-icon>
-        <ion-label>Change Your App Layout</ion-label>
-      </ion-item>
-      <ion-item href="https://ionicframework.com/docs/theming/basics">
-        <ion-icon slot="start" color="medium" name="color-fill"></ion-icon>
-        <ion-label>Theme Your App</ion-label>
-      </ion-item>
-    </ion-list>
+
+  <ion-row>
+    <ion-col>
+      <div>
+        <ion-img [src]="movies.poster_path"></ion-img>
+          <p class="title">{{ movies.title }}</p>
+          <div class="double">
+            <p class="year">{{ movies.release_date | date:'yyyy' }}</p>
+            <ion-icon name="star" class="star"></ion-icon><p class="note">{{ movies.vote_average }}</p>  
+          </div> 
+       </div>
+    </ion-col>
+    <ion-col>
+      <div>
+        <ion-img [src]="movies.poster_path"></ion-img>
+          <p class="title">{{ movies.title }}</p>
+          <div class="double">
+            <p class="year">{{ movies.release_date | date:'yyyy' }}</p>
+            <ion-icon name="star" class="star"></ion-icon><p class="note">{{ movies.vote_average }}</p>  
+          </div> 
+       </div>
+    </ion-col>
+  </ion-row>
+</ion-grid>  
 </ion-content>
