--- a/src/app/tab2/tab2.page.html
+++ b/src/app/tab2/tab2.page.html
@@ -1,7 +1,7 @@
 <ion-header>
   <ion-toolbar>
-    <ion-title>
-     Nom du film
+    <ion-title class="ion-text-center">
+     Top
     </ion-title>
   </ion-toolbar>
 </ion-header>
