--- a/src/app/tab3/tab3.page.html
+++ b/src/app/tab3/tab3.page.html
@@ -1,7 +1,7 @@
 <ion-header>
   <ion-toolbar>
-    <ion-title>
-      Nom de l'acteur
+    <ion-title class="ion-text-center">
+      Prochainement
     </ion-title>
   </ion-toolbar>
 </ion-header>
