--- a/src/app/tab2/tab2.page.html
+++ b/src/app/tab2/tab2.page.html
@@ -6,9 +6,7 @@
   </ion-toolbar>
 </ion-header>
 
-<ion-content></ion-content>
-
-</ion-card-content>
+<ion-content>
   <ion-grid>
     <ion-row *ngIf="movies">
       <ion-col size="6" *ngFor="let movie of movies">
