--- a/src/app/tab3/tab3.page.html
+++ b/src/app/tab3/tab3.page.html
@@ -6,4 +6,17 @@
   </ion-toolbar>
 </ion-header>
 
-<ion-content></ion-content>
+<ion-content>
+  <ion-grid>
+    <ion-row *ngIf="movies">
+      <ion-col size="6" *ngFor="let movie of movies">
+        <img [src]="'https://image.tmdb.org/t/p/w200' + movie.poster_path" />
+        <p class="title">{{ movie.title }}</p>
+          <div class="double">
+            <p class="year">{{ movie.release_date | date:'yyyy' }}</p>
+            <ion-icon name="star" class="star"></ion-icon><p class="note">{{ movie.vote_average }}</p>  
+          </div>
+      </ion-col>      
+    </ion-row>
+  </ion-grid>
+</ion-content>
